# fingerprint-struct

./: COPYING  Cargo.toml
fingerprint-struct/: Cargo.toml  README.md
fingerprint-struct-derive/: Cargo.toml  README.md
fingerprint-struct-derive/src/: generics.rs  lib.rs  utils.rs
fingerprint-struct-derive/src/enums/: discriminant.rs  mod.rs
fingerprint-struct-derive/src/structs/: mod.rs
fingerprint-struct/examples/: complex_types.rs  custom_impl.rs  derive.rs  generic.rs  hello_world.rs  multiple_values.rs  with_prefix.rs  with_version.rs
fingerprint-struct/src/: impls.rs  lib.rs
fingerprint-struct/tests/: derive.rs  fingerprint.rs  impl_dynamic_sequences.rs  impl_fixed_sequences.rs  impl_memory.rs  impl_primitives.rs  impl_special_numeric.rs  impl_std_types.rs
mock-digest/: Cargo.toml  README.md
mock-digest/src/: lib.rs
