[package]
name = "fingerprint-struct"
version = "0.0.1"
edition = "2021"

[dependencies]
digest = { version = "0.10.5", default-features = false }
fingerprint-struct-derive = { version = "0.0.1", path = "../fingerprint-struct-derive", optional = true }

[dev-dependencies]
mock-digest = { version = "0.0.1", path = "../mock-digest" }

[features]
default = ["std", "derive"]

std = ["alloc"]
alloc = []
os = []
derive = ["fingerprint-struct-derive"]
