[package]
name = "fingerprint-struct"
version = "0.0.1"
edition = "2021"

[dependencies]
digest = { version = "0.10.5", default-features = false }
fingerprint-struct-derive = { version = "0.0.1", path = "../fingerprint-struct-derive", optional = true }

[dev-dependencies]
blake2 = "0.10.4"
hex = "0.4.3"
mock-digest = { version = "0.0.1", path = "../mock-digest" }

[features]
default = ["std", "derive"]

std = ["alloc"]
alloc = []
os = []
derive = ["fingerprint-struct-derive"]

[[example]]
name = "hello_world"

[[example]]
name = "multiple_values"

[[example]]
name = "complex_types"
required-features = ["std"]

[[example]]
name = "custom_impl"

[[example]]
name = "derive"
required-features = ["std", "derive"]
